[tool.poetry]
name = "docker-poetry"
version = "0.1.0"
description = "Docker poetry test image"
authors = ["Andreas Trawöger <atrawog@dorgeln.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
cysgp4 = "^0.3.3"
jupyterlab = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
